# graphapi

./: Makefile  POC.md  README.md  TODO
graphsearch/: Makefile  graphsearch.cabal
graphsearch/app/: Main.hs
graphsearch/src/: Graphsearch.hs
graphsearch/test/: Spec.hs
graphserver/: Makefile  crud_test.go  main.go  repo.go
json/: schema.go  schema_test.go
misc/git/: pre-commit
regress/: Makefile  create-dirs-on-start  help.out  result-written
ui/: editor  links  tree
