name:                graphsearch
version:             0.1.0
synopsis:            ..
description:         ...
homepage:            https://github.com/neosimsim/haskell-template
license:             BSD3
license-file:        LICENSE
author:              Alexander Ben Nasrallah
maintainer:          me@abn.sh
-- copyright:
category:            Misc
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/neosimsim/haskell-template

flag develop
  description: Enable warnings and treat them as error.
  default:     False
  manual:      True

library
  exposed-modules: Graphsearch
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*, fsnotify == 0.3.*, time == 1.8.*, filepath == 1.4.*, directory == 1.3.*, concurrency == 1.6.*, strict == 0.3.*, unix == 2.7.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

executable graphsearch
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*, graphsearch, concurrency == 1.6.*, fsnotify == 0.3.*, optparse-applicative == 0.14.*
  hs-source-dirs:      app
  default-language:    Haskell2010
  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base == 4.*, QuickCheck, graphsearch, time == 1.8.*, fsnotify == 0.3.*, dejafu == 1.11.*, concurrency == 1.6.*
  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults
